--- a/src/PenDownToggleSwitch.scss
+++ b/src/PenDownToggleSwitch.scss
@@ -1,5 +1,9 @@
 @import 'variables';
 
+.PenDownToggleSwitch {
+    margin-bottom: 1rem;
+}
+
 .PenDownToggleSwitch:focus {
     box-shadow: 0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
 }
