--- a/src/App.scss
+++ b/src/App.scss
@@ -104,6 +104,14 @@ body {
     margin-left: 50px;
 }
 
+.App__world-selector-container {
+    width: 6rem;
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
 .App__command-palette {
     background-color: #F1F1F1;
     text-align: center;
@@ -138,7 +146,7 @@ body {
 .App__program-block-editor {
     margin-right: 0.5rem;
     grid-column-start: 3;
-    grid-column-end: 4;
+    grid-column-end: 5;
     grid-row-start: 3;
     grid-row-end: 4;
     height: auto;
