--- a/src/WorldSelector.scss
+++ b/src/WorldSelector.scss
@@ -1,12 +1,34 @@
 @import 'variables';
 
 .WorldSelector {
-    margin-left: 2rem;
+    background-color: #CCE6E2;
+    padding: 1rem;
+    border: 1px solid grey;
+    border-radius: 3px;
+    height: 100%;
 }
 
-.WorldSelector button {
-    padding-top: 0.25rem;
-    max-height: 2.4rem;
+.WorldSelector .HeaderIcon, .WorldSelector .WorldIcon {
+    display: block;
+    height: 4rem;
+    width: 4rem;
+    padding: 0.2rem;
+}
+
+.WorldSelector .HeaderIcon {
+    background: none;
+}
+
+.WorldSelector .WorldIcon {
+    box-shadow: inset 0 .1rem .2rem rgba(0, 0, 0, 0.25);
+    background-color: white;
+    border-radius: 5px;
+    margin-top: 0.8rem;
+    padding: 0.4rem;
+}
+
+.WorldSelector .WorldIcon--selected {
+    background: #88C3BC;
 }
 
 .WorldSelector button:focus {
