--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@ body {
     background-color: #FFF;
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: 1fr min-content minmax(auto, 78rem) 1fr;
+    grid-template-columns: 1fr min-content minmax(auto, 78rem) min-content 1fr;
     grid-template-rows: auto auto 1fr 90px;
     row-gap: 0.5rem;
     height: 100vh;
@@ -90,11 +90,12 @@ body {
 }
 
 .App__world-selector-container {
-    width: 6rem;
     grid-column-start: 4;
     grid-column-end: 5;
-    grid-row-start: 2;
+    grid-row-start: 1;
     grid-row-end: 3;
+    margin-right: 0.5rem;
+    width: 6rem;
 }
 
 .App__command-palette {
@@ -137,13 +138,13 @@ body {
     grid-column-start: 3;
     grid-column-end: 5;
     grid-row-start: 3;
-    grid-row-end: 5;
+    grid-row-end: 4;
     height: auto;
 }
 
 .App__playAndShare-background {
     grid-column-start: 1;
-    grid-column-end: 5;
+    grid-column-end: 6;
     grid-row-start: 4;
     grid-row-end: 5;
     background-color: #F1F1F1;
@@ -153,7 +154,7 @@ body {
 .App__playAndShare-container {
     padding: 0 1rem;
     grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column-end: 5;
     grid-row-start: 4;
     grid-row-end: 5;
     display: grid;
