C2LC-290: Wrapped world picker icons in buttons and added aria-pressed attribute.

--- a/src/WorldSelector.scss
+++ b/src/WorldSelector.scss
@@ -27,6 +27,11 @@
     padding: 0.4rem;
 }
 
+.WorldSelector .WorldIcon svg {
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
 .WorldSelector .WorldIcon--selected {
     background: #88C3BC;
 }
