--- a/src/App.scss
+++ b/src/App.scss
@@ -95,6 +95,26 @@ body {
     grid-row-start: 2;
     grid-row-end: 4;
     overflow: hidden;
+
+    .btn-command-block--forward1, .btn-command-block--forward2, .command-block--forward3 {
+        &:hover {
+            background-color: $c2lc-forward-command-hover-color;
+            border: $c2lc-forward-command-hover-color;
+        }
+    }
+
+
+    .btn-command-block--left45, .btn-command-block--left90, .btn-command-block--left180 {
+        &:hover {
+            background-color: $c2lc-left-command-hover-color;
+            border: $c2lc-left-command-hover-color;
+        }
+    }
+
+    .btn-command-block--right45, .btn-command-block--right90, .btn-command-block--right180 {
+        background-color: $c2lc-right-command-hover-color;
+        border: $c2lc-right-command-hover-color;
+    }
 }
 
 .App__command-palette-heading {
@@ -128,6 +148,26 @@ body {
     grid-row-start: 3;
     grid-row-end: 4;
     height: auto;
+
+    .btn-command-block--forward1, .btn-command-block--forward2, .command-block--forward3 {
+        &:hover {
+            background-color: $c2lc-forward-command-hover-color;
+            border: $c2lc-forward-command-hover-color;
+        }
+    }
+
+
+    .btn-command-block--left45, .btn-command-block--left90, .btn-command-block--left180 {
+        &:hover {
+            background-color: $c2lc-left-command-hover-color;
+            border: $c2lc-left-command-hover-color;
+        }
+    }
+
+    .btn-command-block--right45, .btn-command-block--right90, .btn-command-block--right180 {
+        background-color: $c2lc-right-command-hover-color;
+        border: $c2lc-right-command-hover-color;
+    }
 }
 
 .App__playAndShare-background {
