--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,10 +2,14 @@
 
 $c2lc-primary-button-color: #FFFFFF;
 
-$c2lc-forward-command-color: #33717F;
-$c2lc-left-command-color: #D37D12;
-$c2lc-right-command-color: #C13925;
+$c2lc-forward-command-color: #88C3BC;
+$c2lc-forward-command-hover-color: #66B2A9;
 
+$c2lc-left-command-color: #F5C58A;
+$c2lc-left-command-hover-color: #F1AE5B;
+
+$c2lc-right-command-color: #F3988B;
+$c2lc-right-command-hover-color: #EA462F;
 
 $c2lc-focus-indicator-color: #000000;
 
