C2LC-289: Continued updating design based on feedback from Sepi and Figma mockups.

--- a/src/AddNode.scss
+++ b/src/AddNode.scss
@@ -47,6 +47,11 @@ button.btn.AddNode__expanded-button svg {
 }
 
 .AddNode__collapsed-icon svg {
+    height: 0.375rem;
+    width: 0.375rem;
+    margin-top: 0.125rem;
+    margin-left: 0.125rem;
     display: block;
     stroke: #FFF;
+    stroke-width: 2.1px;
 }
