--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -127,7 +127,7 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
     border-radius: 50%;
     padding: 0.5rem;
     background-color: #FFF;
-    box-shadow: 0 0 1rem rgba(70, 70, 70, 0.4);
+    box-shadow: 0 0 0 rgba(70, 70, 70, 0.4);
 }
 
 .ProgramBlockEditor__character-column-character {
