--- a/src/index.scss
+++ b/src/index.scss
@@ -32,12 +32,13 @@ body {
 }
 
 button.btn {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 0.2rem;
 }
 
 button.btn:focus {
-    box-shadow: 0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
+    box-shadow:
+        0 0 0 0.1rem white,
+        0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
     z-index: 1;
 }
 
@@ -73,7 +74,7 @@ button.command-block {
 button.btn.command-block.command-block--pressed,
 button.btn.command-block.command-block--pressed:hover,
 button.btn.command-block.command-block--pressed:active {
-    border: $c2lc-button-border-width dashed #000000;
+    border: $c2lc-button-border-width solid #000000;
 }
 
 button.btn.command-block--dragged {
