C2LC-289: Update base styles and 'Mixed' theme based on latest designs.

--- a/src/AddNode.scss
+++ b/src/AddNode.scss
@@ -5,22 +5,30 @@ $heightOfCollapsedIcon: 0.8rem;
 $widthOfExpandedIcon: 1.7rem;
 $heightOfExpandedIcon: 1.7rem;
 
-$addNodeExpandedButtonBorderWidth: 1px;
+$addNodeExpandedButtonBorderWidth: 2px;
 $addNodeExpandedButtonPadding: 0.5rem;
 
 $addNodeDropMargin: 2.5rem;
 $addNodeDropAreaHeight: 6.25rem;
 
 button.btn.AddNode__expanded-button {
-    border: $addNodeExpandedButtonBorderWidth solid #FFF;
+    border: $addNodeExpandedButtonBorderWidth solid #D5D8DD;
     border-radius: 50%;
-    background-color: #FFF;
+    background-color:  #22343C;
     padding: $addNodeExpandedButtonPadding;
-}
+    svg {
+        width: $widthOfExpandedIcon;
+        height: $heightOfExpandedIcon;
+        display: block;
+        path {
+            stroke: white;
+        }
+    }
 
-button.btn.AddNode__expanded-button:hover {
-    box-shadow: 0 0 0 $c2lc-hover-indicator-width $c2lc-focus-indicator-color;
-    background-color: #e5e5e5;
+    &:hover {
+        box-shadow: 0 0 0 $c2lc-hover-indicator-width $c2lc-focus-indicator-color;
+        background-color: #e5e5e5;
+    }
 }
 
 button.btn.AddNode__expanded-button.AddNode__expanded-button--isDragTarget {
@@ -31,27 +39,18 @@ button.btn.AddNode__expanded-button.AddNode__expanded-button--isDragTarget {
     pointer-events: none;
 }
 
-button.btn.AddNode__expanded-button svg {
-    stroke: #000;
-    width: $widthOfExpandedIcon;
-    height: $heightOfExpandedIcon;
-    display: block;
-}
-
 .AddNode__collapsed-icon {
-    background-color: #939595;
+    background-color: #D5D8DD;
     height: $heightOfCollapsedIcon;
     width: $widthOfCollapsedIcon;
-    border: 0.1rem solid #8F8F8F;
+    padding: 0.225rem;
     border-radius: 50%;
-}
 
-.AddNode__collapsed-icon svg {
-    height: 0.375rem;
-    width: 0.375rem;
-    margin-top: 0.125rem;
-    margin-left: 0.125rem;
-    display: block;
-    stroke: #FFF;
-    stroke-width: 2.1px;
+    svg {
+        height: 0.375rem;
+        width: 0.375rem;
+        display: block;
+        stroke: black;
+        stroke-width: 2.1px;
+    }
 }
