--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -1,13 +1,14 @@
 @import 'variables';
 
 @keyframes pausedAnimation {
-    0% {box-shadow: 0 0 0 0.7rem #53A28C;}
-    50% {box-shadow: 0 0 0 0.4rem #53A28C;}
-    100% {box-shadow: 0 0 0 0.7rem #53A28C;}
+    0% {box-shadow: 0 0 0 6px #53A28C;}
+    50% {box-shadow: 0 0 0 4px #53A28C;}
+    100% {box-shadow: 0 0 0 6px #53A28C;}
 }
 
 .ProgramBlockEditor__container {
     background-color: #F1F1F1;
+    border-radius: 3px;
     display: grid;
     height: 100%;
     grid-template-columns: 6rem auto;
@@ -15,11 +16,12 @@
 }
 
 .ProgramBlockEditor__header {
+    border-radius: 3px;
+    display: grid;
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-    display: grid;
     grid-template-columns: auto auto;
 }
 
@@ -60,10 +62,6 @@ button.btn.ProgramBlockEditor__program-deleteAll-button {
     border-radius: 50%;
     background-color: #FFF;
     padding: 0.5rem;
-}
-
-button.btn.ProgramBlockEditor__program-deleteAll-button:not(:focus) {
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
 }
 
 button.btn.ProgramBlockEditor__program-deleteAll-button--pressed {
@@ -117,9 +115,10 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
     grid-column-start: 1;
     grid-column-end: 2;
     background: #FFF;
-    border-width: 0.1rem 0 0.1rem 0.1rem;
-    border-color: #8F8F8F;
-    border-style: solid;
+    box-shadow: 2px 0px 1px #8F8F8F;
+    border: 0px;
+    border-radius: 3px;
+    padding-top: 2rem;
     pointer-events: none;
 }
 
@@ -127,7 +126,7 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
     border-radius: 50%;
     padding: 0.5rem;
     background-color: #FFF;
-    box-shadow: 0 0 0 rgba(70, 70, 70, 0.4);
+    box-shadow: 2px 0px 1px #19282F;
 }
 
 .ProgramBlockEditor__character-column-character {
@@ -136,16 +135,16 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
 }
 
 .ProgramBlockEditor__program-sequence-scroll-container {
+    border-radius: 3px;
     display: flex;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
-    border: 0.1rem solid #8F8F8F;
     background: #FFF;
     overflow: scroll;
     padding-left: 2rem;
-    padding-top: 2rem;
+    padding-top: 0.5rem;
 }
 
 .ProgramBlockEditor__program-sequence {
@@ -177,7 +176,7 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
 }
 
 button.ProgramBlockEditor__program-block--active {
-    box-shadow: 0 0 0 0.7rem #53A28C;
+    box-shadow: 0 0 0 6px #53A28C;
 }
 
 button.ProgramBlockEditor__program-block--paused {
