--- a/src/RefreshButton.scss
+++ b/src/RefreshButton.scss
@@ -16,13 +16,9 @@ button.btn.RefreshButton svg {
 
 button.btn.RefreshButton {
     padding: 0.5rem;
-    border: 1px solid #FFF;
+    border: 0;
     border-radius: 50%;
     background-color: #FFF;
-}
-
-button.btn.RefreshButton:not(:focus) {
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
 }
 
 button.btn.RefreshButton.RefreshButton--disabled:active:focus {
