--- a/src/AudioFeedbackToggleSwitch.scss
+++ b/src/AudioFeedbackToggleSwitch.scss
@@ -1,5 +1,5 @@
 @import 'variables';
 
 .AudioFeedbackToggleSwitch:focus {
-    box-shadow: 0 0 0 $c2lc-focus-indicator-width #299DCE;
+    box-shadow: 0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
 }
