--- a/src/AudioFeedbackToggleSwitch.scss
+++ b/src/AudioFeedbackToggleSwitch.scss
@@ -1,5 +1,18 @@
 @import 'variables';
 
-.AudioFeedbackToggleSwitch:focus {
-    box-shadow: 0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
+.AudioFeedbackToggleSwitch {
+    &:focus {
+        box-shadow: 0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
+    }
+    .ToggleSwitch__switch-inner-circle {
+        background-color: white;
+        svg {
+            path {
+                stroke: black;
+            }
+        }
+    }
+    &.ToggleSwitch--checked {
+        background-color: #5BABBD;
+    }
 }
