--- a/src/Themes.scss
+++ b/src/Themes.scss
@@ -58,25 +58,6 @@ body.mixed-theme {
         fill: $c2lc-dark-green-color;
     }
 
-    .PenDownToggleSwitch {
-        background-color: #B9BEC6;
-        .ToggleSwitch__switch-inner-circle {
-            background-color: white;
-            svg {
-                path {
-                    stroke: black;
-                }
-            }
-        }
-        &.ToggleSwitch--checked {
-            background-color: #5BABBD;
-        }
-    }
-
-    .RefreshButton {
-        background-color: #5BABBD;
-    }
-
     .ProgramBlockEditor__header {
         background-color: $c2lc-medium-green-color;
     }
@@ -88,28 +69,7 @@ body.mixed-theme {
     .ProgramBlockEditor__program-sequence-scroll-container {
         background-color: $c2lc-very-very-dark-green-color;
     }
-
-    .ProgramBlockEditor__add-node-toggle-switch.ToggleSwitch {
-        background-color: #B9BEC6;
-        .ToggleSwitch__switch-inner-circle {
-            background-color: white;
-            svg {
-                path {
-                    stroke: black;
-                }
-            }
-        }
-    }
-
-    .ProgramBlockEditor__add-node-toggle-switch.ToggleSwitch--checked {
-        background-color: #5BABBD;
-    }
-   
-    button.btn.ProgramBlockEditor__program-deleteAll-button {
-        border: none;
-        background-color: #5BABBD;
-    }
-
+  
     .ProgramSpeedController__slider {
         &::-webkit-slider-runnable-track {
             background-color: black;
@@ -161,69 +121,19 @@ body.light-theme {
     }
     
     .App__command-palette {
-        background-color: $c2lc-medium-green-color;
+        background-color: $c2lc-light-green-color;
     }
     
-    .App__command-palette-command-container {
-        &::-webkit-scrollbar {
-            background-color: $c2lc-medium-green-color;
-        }
-        &::-webkit-scrollbar-thumb {
-            background-color: $c2lc-light-green-color;
-        }
-    }
-
-    // We have to use IDs here to overpower styles inherited based on our use of react-bootstrap's $theme-colors
-    #command-block--forward1,
-    #command-block--forward2,
-    #command-block--forward3,
-    #command-block--left45,
-    #command-block--left90,
-    #command-block--left180,
-    #command-block--right45,
-    #command-block--right90,
-    #command-block--right180,
-    // TODO: Add backward commands to the above.
-    .command-block {
-        svg {
-            path, circle, rect {
-                stroke: white;
-            }
-            circle, rect, path.filled {
-                fill: white;
-            }                        
-        }
-    }
-
     .Scene {
-        background-color: white;
+        background-color: #EEF2F6;
     }
 
     .Scene__grid-line, .Scene__path-line {
-        stroke: $c2lc-light-grey-color;
+        stroke: #CDD7E4
     }
 
     .Character__icon-background {
         fill: $c2lc-dark-green-color;
-    }
-
-    .PenDownToggleSwitch {
-        background-color: $c2lc-dark-green-color;
-        .ToggleSwitch__switch-inner-circle {
-            background-color: white;
-            svg {
-                path {
-                    stroke: black;
-                }
-            }
-        }
-    }
-
-    .RefreshButton {
-        background-color: $c2lc-dark-green-color;
-        svg path {
-            fill: black;
-        }
     }
 
     .ProgramBlockEditor__header {
@@ -235,20 +145,30 @@ body.light-theme {
     }
 
     .AddNode__collapsed-icon {
-        background-color: $c2lc-very-very-dark-gray-color;
-    }
-    .AddNode__expanded-button {
-        border: 3px solid $c2lc-very-very-dark-gray-color;
-        box-shadow: none;
+        background-color: #505862;
+        svg path {
+            stroke: white;
+            stroke-width: 6px;
+        }
     }
 
-    .ProgramBlockEditor__add-node-toggle-switch.ToggleSwitch--checked {
-        background-color: $c2lc-dark-green-color;
-    }
+    button.btn.AddNode__expanded-button {
+        border: 3px solid $c2lc-very-very-dark-gray-color;
+        box-shadow: none;
+        background-color: white;
+        svg {
+            path {
+                stroke: black;
+            }
+        }
     
-    button.btn.ProgramBlockEditor__program-deleteAll-button {
-        border: none;
-        background-color: $c2lc-dark-green-color;
+        &:hover {
+            background-color: #e5e5e5;
+        }
+    }
+
+    .ProgramBlockEditor__program-sequence-scroll-container {
+        border: 2px solid $c2lc-medium-green-color;
     }
 
     .App__playAndShare-background {
